@@ -2,14 +2,15 @@ Version 3.0.2 July 2, 2006
 ==========================
 BUG: Ticket#182 - List and validator controls cause problem in child classes (Qiang)
 BUG: Ticket#191 - Duplicated postbacks occur when using TButton with validators (Qiang)
+BUG: Ticket#207 - Validators ClientSide.OnError triggered twice (Wei)
 BUG: Ticket#213 - PRADO Requirements Checker charset error (Qiang)
+BUG: Ticket#227 - Enabled property doesn't works with THtmlArea (Wei)
 BUG: Ticket#234 - Postback target could be out of date (Qiang)
 BUG: Ticket#239 - Ondeactivate handler for the first View of MultiView is always fired (Qiang)
 BUG: Ticket#244 - redirect() needs absolute URL (Qiang)
 BUG: Ticket#245 - getIsSecureConnection() is not working correctly (Qiang)
-BUG: Ticket#260 - Wrong value of a configuration option in setUseTransparentSessionID (Qiang)
-BUG: Ticket#227 - Enabled property doesn't works with THtmlArea (Wei)
 BUG: Ticket#246 - TDatePicker wrong popup position in scrolled div (Wei)
+BUG: Ticket#260 - Wrong value of a configuration option in setUseTransparentSessionID (Qiang)
 CHG: ensureChildControls() is now invoked in TControl::initRecursive (Qiang)
 CHG: Postback enabled control will always disable default client-side browser action. (Qiang)
 CHG: CSS and JS files in a theme are now included in page in alphabetic order (Qiang)
@@ -24,6 +25,7 @@ ENH: TRepeater, TDataList and TDataGrid will store data indices in DataKeys if D
 ENH: Added TPageService.BasePageClass property (Qiang)
 ENH: Added TDataGrid.EmptyTemplate property (Qiang)
 ENH: Added paging feature to all TDataBoundControl-derived controls (Qiang)
+ENH: ClientSide.ObserveChanges="false" to only revalidate client side validator when control changes (Wei)
 NEW: Added TPager (Qiang)
 NEW: Added Dreamweaver taglib extension (Stanislav, Qiang)
 NEW: Prado Command line script to create a new project, see framework/prado-cli.php (Wei)
